feat: add security-events permission for SARIF uploads
Add security-events: write permission to enable SARIF uploads to GitHub Security tab.
This permission is required for the dual-layer security scanning implemented in the
reusable workflows (Semgrep, Bandit, pip-audit, npm audit, Trivy, Grype).

Part of defense-in-depth security architecture for centralized vulnerability tracking.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
       actions: write
       contents: write
       packages: write
+      security-events: write
     with:
       tool: "uv"
       install: "sync --all-extras --dev --group lint"
